Also see Moose::Manual::Delta for more details of, and workarounds
for, noteworthy changes.

{{$NEXT}}

  [BUG FIXES]

  * Fix compilation on 5.8. Reported by ether. (doy)

  [ENHANCEMENTS]

  * The enum type will now allow single value enumerations. Previously, two or
    more values were required. (rjbs)

2.0300 Fri, Sep 23, 2011

  [DEPRECATIONS]

  * The optimize_as option for type constraints has been deprecated. Use the
    inline_as option to provide inlining code instead. (Dave Rolsky)

  [API CHANGES]

  * Methods to introspect a class's methods will now return methods defined in
    UNIVERSAL (isa, can, etc.). This also means that you can wrap these
    methods with method modifiers. RT #69839. Reported by Vyacheslav
    Matyukhin. (Dave Rolsky)

  * The ->parent and ->parents method for a union now return the nearest
    common ancestor of that union's component types. See Moose::Manual::Delta
    for more details. (Dave Rolsky)

  * The ->parents method used to return an arrayref for union types, and a
    list of one or more types for all other types. Now they all return
    lists. (Dave Rolsky)

  * The ->is_subtype_of and ->is_a_type_of methods have changed their behavior
    for union types. Previously, they returned true if any of their member
    types returned true for a given type. Now, all of the member types must
    return true. RT #67731. (Dave Rolsky)

  [ENHANCEMENTS]

  * The Moose::Exporter module now has a "meta_lookup" option when creating an
    importer. This allows you to specify an alternate method for determining
    the metaclass of a caller. This is useful for modules like
    MooseX::Role::Parameterized which generate new metaclasses on the
    fly. (sartak)

  * Added a Moose::Meta::Method->is_stub method. (Dave Rolsky)

  [BUG FIXES]

  * A subtype of a union type did not return the right results when you called
    ->is_subtype_of or ->is_a_type_of on it. This has been fixed. RT
    #70322. (Dave Rolsky)
